# devtalks_plugindemo

./: CMakeLists.txt  LICENSE  README.md
plugins/: CMakeLists.txt  bar.cpp  foo.cpp  python.cpp  time.cpp  whoami.cpp
pyplugins/: CMakeLists.txt  DemoPlugin.py  pp_bar.py  pp_foo.py  pp_poo.py
src/: CMakeLists.txt  Context.h  Data.h  Plugin.cpp  Plugin.h  PluginLoader.cpp  PluginLoader.h  main.cpp
