CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

SET(CMAKE_INSTALL_PREFIX "/home/rvoinea/bin/pluginDemo")

PROJECT(pluginDemo VERSION 0.1)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "-Wall -Werror -fPIC -g")
SET(CMAKE_VERBOSE_MAKEFILE 1)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF (NOT DEFINED CMAKE_INSTALL_PREFIX)
	MESSAGE("*** CMAKE_INSTALL_PREFIX NOT defined. Setting to /home/rvoinea/bin/${PROJECT_NAME}")
ELSE (NOT DEFINED CMAKE_INSTALL_PREFIX)
	MESSAGE("*** CMAKE_INSTALL_PREFIX defined to ${CMAKE_INSTALL_PREFIX}")
ENDIF (NOT DEFINED CMAKE_INSTALL_PREFIX)

FIND_PACKAGE(Python COMPONENTS Interpreter Development REQUIRED)

IF (Python_FOUND)
	MESSAGE("*** FOUND Python ${Python_VERSION}")
ENDIF (Python_FOUND)

ADD_DEFINITIONS(-DINSTALL_PREFIX="${CMAKE_INSTALL_PREFIX}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(plugins)
ADD_SUBDIRECTORY(pyplugins)
