
INCLUDE_DIRECTORIES(../src)

ADD_LIBRARY(foo SHARED foo.cpp)
TARGET_LINK_LIBRARIES(foo plugin)

ADD_LIBRARY(bar SHARED bar.cpp)
TARGET_LINK_LIBRARIES(bar plugin)

ADD_LIBRARY(time SHARED time.cpp)
TARGET_LINK_LIBRARIES(time plugin)

ADD_LIBRARY(whoami SHARED whoami.cpp)
TARGET_LINK_LIBRARIES(whoami plugin)

ADD_LIBRARY(python SHARED python.cpp)
SET(PYTHON_RUNTIME_PATHS "${CMAKE_INSTALL_PREFIX}/pyplugins:${Python_STDARCH}:${Python_STDLIB}:${Python_STDARCH}/lib-dynload:${Python_STDLIB}/lib-dynload")
MESSAGE(INFO "PYTHON_RUNTIME_PATHS ${PYTHON_RUNTIME_PATHS}")

TARGET_COMPILE_DEFINITIONS(python PUBLIC PYTHON_RUNTIME_PATHS=L"${PYTHON_RUNTIME_PATHS}")
TARGET_LINK_LIBRARIES(python plugin Python::Python)

INSTALL(TARGETS foo bar time whoami python DESTINATION lib)
